Fix links to images from search results when not using a slideshow. Fix images being stretched on a screen that is taller than it is wide with wide images.

--- a/content/image-viewer.css
+++ b/content/image-viewer.css
@@ -4,53 +4,54 @@
     src: url('/Content/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../Content/glyphicons-halflings-regular.woff2') format('woff2'), url('../Content/glyphicons-halflings-regular.woff') format('woff'), url('../Content/glyphicons-halflings-regular.ttf') format('truetype'), url('../Content/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 
-html, body
-{
+html, body {
     height: 100%;
 }
 
-body
-{
+body {
     background-color: #EEE;
 }
 
-#slideshow-start
-{
+.pointer {
     cursor: pointer;
 }
 
-#slideshow-player
-{
+#slideshow-start {
+    cursor: pointer;
+}
+
+.slideshow-player  {
     text-align: center;
-    height: 8%;
+    height: 8%
 }
 
-#slideshow-player > img
-{
+.slideshow-player img {
     cursor: pointer;
 }
 
-#slideshow-player > img
-{
+.slideshow-player img {
     margin-left: 10px;
     margin-right: 10px;
 }
 
-#slideshow-interval
-{
+#slideshow-interval {
     width: 30px;
 }
 
-#slideshow-image-container
-{
+#slideshow-image-container {
     height: 92%;
     text-align: center;
+}
+
+#slideshow-image-container.hide-controls {
+    height: 100%;
 }
 
 #slideshow-image
 {
     height: 100%;
     max-width: 100%;
+    object-fit: contain;
 }
 
 #home-away-status{
@@ -81,7 +82,7 @@ body
     -moz-osx-font-smoothing: grayscale;
 }
 
-#slideshow-player .glyphicon {
+.slideshow-player .glyphicon {
     vertical-align: middle;
     font-size: 1.3rem;
 }
